k8s/overlays/azure-new/dev/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridcapa-postgresql
  labels:
    app: gridcapa
    component: postgresql
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: postgresql
  template:
    metadata:
      labels:
        app: gridcapa
        component: postgresql
    spec:
      containers:
        - name: gridcapa-postgresql
          image: docker.io/bitnami/postgresql:14.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "500m"
              memory: 1Gi
          volumeMounts:
            - name: postgres-data
              mountPath: /bitnami/postgres # important to let postgres and not postgresql otherwise rights issues
            - name: postgres-init
              subPath: init.sh
              mountPath: /docker-entrypoint-initdb.d/init.sh
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: gridcapa-postgresql-storage
        - name: postgres-init
          configMap:
            name: gridcapa-postgresql-configmap
